[package]
name = "user-facing-errors"
version = "0.1.0"
authors = ["Tom Houlé <tom@tomhoule.com>"]
edition = "2021"

[dependencies]
user-facing-error-macros = { path = "../user-facing-error-macros" }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0.102", features = ["derive"] }
backtrace = "0.3.40"
tracing = "0.1"
indoc = "1"

[dependencies.quaint]
git = "https://github.com/prisma/quaint"
rev = "a0722f26311669377ca9069843e8866a1706c42a"
features = ["mysql", "postgresql", "sqlite", "mssql"]
optional = true

[features]
default = []
sql = ["quaint"]
